<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@color/appBackground"
    android:orientation="vertical"
    tools:context=".ui.newboard.boardlayout.BoardLayoutActivity">
    
    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />
    
    <TextView
        android:id="@+id/tv_bl_act_directions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/tv_bl_act_directions"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorPrimary"
        android:textSize="22sp" />
    
    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />
    
    <ImageButton
        android:id="@+id/ib_bl_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/flatBlack"
        android:contentDescription="@string/ib_bl_one"
        android:contextClickable="true"
        android:src="@drawable/boardlayoutone"
        tools:targetApi="m" />
    
    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp" />
    
    <ImageButton
        android:id="@+id/ib_bl_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/flatBlack"
        android:contentDescription="@string/ib_bl_two"
        android:contextClickable="true"
        android:src="@drawable/boardlayouttwo"
        tools:targetApi="m" />
    
    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp" />
    
    <ImageButton
        android:id="@+id/ib_bl_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/flatBlack"
        android:contentDescription="@string/ib_bl_three"
        android:contextClickable="true"
        android:src="@drawable/boardlayoutthree"
        tools:targetApi="m" />

</LinearLayout>